# polish-notation

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
src/polish_notation/: __init__.py
src/polish_notation/core/: convert.py  lexer.py  models.py  parser.py
tests/: test_convert.py  test_lexer.py  test_parser.py
